src/objects/Core_Device_Package_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Source_Id__c</fullName>
        <label>Application Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Core_Device_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Device_Package__c</fullName>
        <label>Core Device Package</label>
        <referenceTo>Core_Device_Package__c</referenceTo>
        <relationshipLabel>Core Device Package Applications</relationshipLabel>
        <relationshipName>Core_Device_Package_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Include_in_BOM__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include in BOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFID_App__c</fullName>
        <formula>Application__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID_App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <label>Core Device Package Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Application_Source_Id__c</columns>
        <columns>Core_Device_Package__c</columns>
        <columns>Include_in_BOM__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDA-{0000000000}</displayFormat>
        <label>Core Device Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Device Package Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>